--- a/layout.css
+++ b/layout.css
@@ -37,8 +37,7 @@ p{
     z-index: 30;
     position:fixed;
     width:20%;
-    height:100%;
-    top: 5%;
+    top: 80%;
     left:0;
     margin-left: 5%;
     color: gray;
@@ -65,11 +64,15 @@ p{
 }
 
 h1{
-   
     font-size: 25px;
-    font-weight: 100;
+    font-weight: 200;
 }
 h2{
     font-size: 11px;
     font-weight: 100;
 }
+h3{
+    font-size: 11px;
+    font-weight: 200;
+}
+
